--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,10 @@ body{
 #wrapper{
     width: 100%;
     margin: 0 auto;
-    background: rgb(245, 244, 244);
+    background: rgb(0, 0, 0);
 }
 #main-navigation{
-    background: #101010;
+    background: black;
     padding: 10px;
 }
 #main-navigation ul{
@@ -18,8 +18,9 @@ body{
     margin-right: 10px;
 }
 #main-navigation li{
-    display: inline-block;
+    /* display: inline-block; */
     margin-left: 20px;
+    font-family: monoton;
 }
 #main-navigation a{
     color: yellow;
@@ -121,4 +122,83 @@ background: -webkit-linear-gradient(bottom,gray, yellow);
 }
 .footer a:active{
     color:lime;
+}
+
+.navigation{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 50px;
+    max-width: 1400px;
+    margin: auto;
+    width: 100%;
+    background-color:black;
+    
+    
+}
+
+.navigation .menu-icon{
+    cursor: pointer;
+    float: right;
+    padding: 20px 10px;
+    z-index: 103;
+    
+}
+.navigation .menu-icon .nav-icon{
+    background-color: yellow;
+    display: block;
+    height: 2px;
+    width: 25px;
+    position: relative;
+    transition: background 0.2s ease-out;
+}  
+.navigation .menu-icon .nav-icon::before,
+.navigation .menu-icon .nav-icon::after {
+    background-color: yellow;
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition: all ease-out 0.2s;
+
+}
+.navigation .menu-icon .nav-icon::before{
+    top: 8px;
+}
+.navigation .menu-icon .nav-icon::after{
+    top: -8px;
+}
+
+
+.navigation .menu-btn:checked ~ .menu-icon .nav-icon{
+    background-color: transparent;
+}
+.navigation .menu-btn:checked ~ .menu-icon .nav-icon::before{
+    transform: rotate(-45deg);
+    top: 0px;   
+}
+.navigation .menu-btn:checked ~ .menu-icon .nav-icon::after{
+    transform: rotate(45deg);
+    top: 0;
+}
+.menu-btn{
+    display: none;
+}
+
+.menu{
+    display: none;
+    justify-content: right;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    
+    
+}
+
+.navigation .menu-btn:checked ~ .menu {
+    display: flex;
+    justify-content: center;
+    /* visibility: visible; */
+    /* background-color: blue!important; */
 }
